chore: add CoordinatePoint tests